added ruff to uv

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "duckdb>=1.4.4",
     "pandas>=3.0.0",
     "python-dotenv>=1.2.1",
+    "ruff>=0.15.2",
     "scikit-learn>=1.8.0",
 ]
