--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,8 +19,11 @@ jobs:
         uses: astral-sh/setup-uv@v7
 
       - name: Install the project
-        run: uv sync --locked --all-extras --dev
+        run: uv sync --locked
+
+      - name: Install Ruff
+        run: uv add ruff
 
       - name: Run Ruff
-        run: ruff check main.py
+        run: uv ruff check main.py
 
